Revert back to fixed width container
The earlier commits were allowing the pages to be too wide on high
resolution.

--- a/app/assets/stylesheets/application_layout.css.scss
+++ b/app/assets/stylesheets/application_layout.css.scss
@@ -15,7 +15,7 @@ body, p, ol, ul, td, a {
 }
 
 #application-container {
-  min-width: $application_master_width;
+  width: $application_master_width;
 
   margin: 0px auto;
 
